# SDL_ConwaysGameOfLife

./: .gitignore  CMakeLists.txt  README.md
src/: engine.cpp  infile.txt  main.cpp  renderer.cpp
src/include/: engine.h  renderer.h
